[package]
name = "ptp-rs"
version = "0.1.0"
authors = ["Szymon Mikulicz <szymon.mikulicz@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    mio = {version = "0.7", features = ["udp", "os-poll"]}
    signal-hook = "0.1"
    nom = "5.0"
    num = "0.2"
    num-derive = "0.3"
    num-traits = "0.2"
    enum-repr = "0.2"
