[package]
name = "ptp"
version = "0.1.0"
authors = ["Szymon Mikulicz <szymon.mikulicz@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    mio = {version = "0.7", features = ["udp", "os-poll"]}
    signal-hook = "0.1"
    nom = "5.0"
    docopt = "1"
    serde = "1.0"
    serde_derive = "1.0"
    ifaces = "0.1"
    num_enum = "0.4"
    bitstream-io = "0.8"
    bit-serialize-derive = { path = "bit-serialize-derive" }
